--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Label Content="Label" HorizontalAlignment="Left" Margin="124,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="134,57,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
